Organogram mass upload and validation scripts

--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -8,7 +8,7 @@ default:
         authenticated_user:
           'pass'
         admin:
-          'pass'
+          'dgupass'
         editor:
           'pass'
         jamesashton:
